# Sastreriaprats

./: .cursorrules  .env.example  .gitignore  MANUAL_PRODUCTOS_ETIQUETAS.md  MANUAL_TPV.md  RESTAURAR-ESTADO.md  drizzle.config.ts  next.config.ts  package-lock.json  package.json  vercel.json
docs/: CHULETA_ADMIN.md  GUIA_ADMIN.md  generar-guia.mjs
email-previews/: appointment_reminder.html  appointment_reminder_2h.html
public/: manifest.json  offline.html  sw.js
scripts/: _md-to-pdf.mjs  _redirect-suggestions.csv  _web-slugs.json  apply-003c-if-missing.sql  apply-109-sale-lines-reservation-id.mjs  apply-121-fix-rpc-create-sale.mjs  apply-122-vendedores-transfer.mjs  apply-123-vendedores-approve-transfer.mjs  apply-126-gift-cards.mjs  apply-127-product-collections-seasons.mjs  apply-129-size-guides.mjs  apply-130-fix-reservation-unit-price.mjs  apply-131-irpf.mjs  apply-134-seasons-migrate.mjs  apply-141-fix-return-cash-session.mjs  apply-162-discount-codes-free-shipping.mjs  apply-196-rpc-fuzzy-search.mjs  apply-197-tailoring-payment-date.mjs  apply-231-commission-plans.mjs  apply-243-appointment-guest-name.mjs  apply-ap-supplier-invoice-payments-migration.mjs  apply-online-order-lines-status.mjs  apply-reservation-lines-migrations.mjs  apply-supplier-variant-migration.mjs  apply-transfer-partial-migration.mjs  check-hero-settings.mjs  check-industrial-lines.sql  check-migrations.sql  check-sale-lines-columns.mjs  check-web-content-bucket.mjs  cleanup-and-create-admin.sql  debug-supplier-due-dates.mjs  diag-fabrics-stock.mjs  (+55 more)
src-tauri/: Cargo.toml  tauri.conf.json
(+952 files in other folders)
