[package]
name = "sastreria-prats"
version = "1.0.0"
description = "Sastrería Prats — Plataforma de gestión"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open-api", "dialog-all", "fs-read-file", "fs-write-file", "window-all", "notification-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
